--- a/01/src/Makefile
+++ b/01/src/Makefile
@@ -7,9 +7,9 @@ LIBS=$(OPENGLLIB) $(GLEWLIB) $(GLFWLIB)
 LDFLAGS=-L/usr/local/lib 
 CPPFLAGS=-I/usr/local/include -I./
 
-BIN=03_colorcube_rotate
-SRCS=03_colorcube_rotate.cpp gl_framework.cpp shader_util.cpp 
-INCLUDES=gl_framework.hpp shader_util.hpp 03_colorcube_rotate.hpp
+BIN=assignment1
+SRCS=main.cpp gl_framework.cpp shader_util.cpp 
+INCLUDES=gl_framework.hpp shader_util.hpp main.hpp
 
 all: $(BIN)
 
